# joho_database

./: .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml
scripts/: simple_hello.py
src/: __init__.py  manage.py
src/comparator_app/: admin.py  apps.py  models.py
src/comparator_app/migrations/: 0001_initial.py  0002_rateparametermapping_name_mapping_and_more.py  0003_remove_rateparametermapping_name_mapping_and_more.py  0004_alter_productmodules_unique_together_and_more.py  0005_productmodules_premiums_available.py  0006_premiumrates_combination.py
src/expat_project/: asgi.py  settings.py  urls.py  wsgi.py
