[project]
name = "expat-insurance-platform"
version = "0.1.0"
description = "Expat Insurance Configurator & Comparison Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    
    "django>=5.2.6",
    "psycopg2-binary>=2.9.0",
    "python-decouple>=3.8",
    "django-smart-selects",
    "django-extensions",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "isort",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
